Fix book cover image cutoff in cards and bundle homepage background image in theme assets

--- a/themes/custom/drupal_cms_radix/src/scss/base/_site-polish.scss
+++ b/themes/custom/drupal_cms_radix/src/scss/base/_site-polish.scss
@@ -690,6 +690,15 @@
     justify-content: center;
     padding: 0;
     
+    a, div, picture {
+      display: block;
+      height: 100%;
+      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
+      overflow: hidden;
+    }
+    
     img {
       width: 100%;
       height: 100%;
@@ -784,6 +793,16 @@
     align-items: center;
     justify-content: center;
     padding: 0.75rem; // reduced padding for taller presentation inside 170px height
+    
+    a, div, picture {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
+    }
     
     img {
       max-height: 100%;
